--- a/src/FileServer.Hosted/FileServer.Hosted.csproj
+++ b/src/FileServer.Hosted/FileServer.Hosted.csproj
@@ -8,5 +8,10 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\FileServer.Common\FileServer.Common.csproj" />
+    <ProjectReference Include="..\FileServer.FileProvider\FileServer.FileProvider.csproj" />
+  </ItemGroup>
+
 
 </Project>
