--- a/src/FileServer.Hosted/FileServer.Hosted.csproj
+++ b/src/FileServer.Hosted/FileServer.Hosted.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\FileServer.OSS\FileServer.OSS.csproj" />
     <ProjectReference Include="..\FileServer.Common\FileServer.Common.csproj" />
     <ProjectReference Include="..\FileServer.FileProvider\FileServer.FileProvider.csproj" />
   </ItemGroup>
