--- a/src/FileServer.Hosted/appsettings.json
+++ b/src/FileServer.Hosted/appsettings.json
@@ -6,5 +6,11 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "FileServer": {
+    "UploadPath": "D:/UploadPath",
+    "RequestPath": "/FilePath",
+    "EnableDirectoryBrowsing": true,
+    "ProviderType": 0
+  }
 }
