--- a/src/FileServer.Hosted/appsettings.json
+++ b/src/FileServer.Hosted/appsettings.json
@@ -11,6 +11,9 @@
     "UploadPath": "D:/UploadPath",
     "RequestPath": "/FilePath",
     "EnableDirectoryBrowsing": true,
-    "ProviderType": 0
+    "ProviderType": 0,
+    "FileSystem": {
+      "BasePath": "D:/UploadPath"
+    }
   }
 }
