--- a/src/FileServer.Common/FileServer.Common.csproj
+++ b/src/FileServer.Common/FileServer.Common.csproj
@@ -6,4 +6,7 @@
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
 	</ItemGroup>
+	<ItemGroup>
+	  <PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
+	</ItemGroup>
 </Project>
