--- a/src/FileServer.FileProvider/FileServer.FileProvider.csproj
+++ b/src/FileServer.FileProvider/FileServer.FileProvider.csproj
@@ -5,10 +5,15 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="JetBrains.Annotations" Version="2021.2.0" />
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="5.0.0" />
 	</ItemGroup>
 	
 	<ItemGroup>
 		<FrameworkReference Include="Microsoft.AspNetCore.App" />
+	</ItemGroup>
+	
+	<ItemGroup>
+	  <ProjectReference Include="..\FileServer.Common\FileServer.Common.csproj" />
 	</ItemGroup>
 </Project>
