--- a/src/FileServer.Hosted/FileServer.Hosted.csproj
+++ b/src/FileServer.Hosted/FileServer.Hosted.csproj
@@ -9,9 +9,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\FileServer.FileSystem\FileServer.FileSystem.csproj" />
     <ProjectReference Include="..\FileServer.Common\FileServer.Common.csproj" />
     <ProjectReference Include="..\FileServer.FileProvider\FileServer.FileProvider.csproj" />
+    <ProjectReference Include="..\FileServer.FileSystem\FileServer.FileSystem.csproj" />
   </ItemGroup>
 
 
