--- a/src/FileServer.Hosted/appsettings.json
+++ b/src/FileServer.Hosted/appsettings.json
@@ -8,12 +8,19 @@
   },
   "AllowedHosts": "*",
   "FileServer": {
-    "UploadPath": "D:/UploadPath",
-    "RequestPath": "/FilePath",
-    "EnableDirectoryBrowsing": true,
-    "ProviderType": 0,
+    "VirtualFileSystem": {
+      "UploadPath": "D:/UploadPath",
+      "RequestPath": "/FilePath",
+      "EnableDirectoryBrowsing": true
+    },
     "FileSystem": {
       "BasePath": "D:/UploadPath"
+    },
+    "Minio": {
+      "AccessKey": "",
+      "SecretKey": "",
+      "BucketName": "",
+      "EndPoint": ""
     }
   }
 }
