--- a/src/FileServer.VirtualFileSystem/FileServer.VirtualFileSystem.csproj
+++ b/src/FileServer.VirtualFileSystem/FileServer.VirtualFileSystem.csproj
@@ -2,6 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.1</TargetFramework>
+		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+		<Description>Virtual File System for FileServer</Description>
+		<Copyright>jinjupeng</Copyright>
+		<PackageProjectUrl>https://github.com/jinjupeng/FileServer</PackageProjectUrl>
+		<RepositoryUrl>https://github.com/jinjupeng/FileServer</RepositoryUrl>
 	</PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Microsoft.Extensions.FileProviders.Abstractions" Version="5.0.0" />
